[package]
name = "accord-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { version = "0.14.3", features = ["raw"] }
tracing = "0.1.40"

# dev dependencies are not allowed to be optional
# kani doesnt use dev-dependencies :(
# https://github.com/model-checking/kani/issues/585
# vector-map = { version = "1.0.1", optional = true }
vector-map = { path = "vec-map-rs", optional = true }

[dev-dependencies]
once_cell = "1.19.0"
tracing-subscriber = "0.3.18"

[features]
verification = ["vector-map"]
